--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 /*
- * Dit is de custom style sheet van jouw website
- *
+Dit is de custom style sheet van jouw website
  */
 
 body {
-	
+	margin: 0;
+	padding: 0;
 
 }
 
@@ -21,4 +21,41 @@ body {
 img {
 	width: 200px;
 	height: 200px;
+}
+
+header {
+	background-color: red;
+}
+
+footer {
+	background-color: red;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+    border-right:1px solid #bbb;
+}
+
+li:last-child {
+    border-right: none;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #111;
 }
